# DugAnnotationComparator

./: README.md  requirements.txt  setup.cfg
src/: AnnotationDiff.py  NodeNormalization.py  main.py  sample_task.json  setup.cfg
src/dugannotationcomparator/: acomptask.py  annotationdiff.py  fileoperations.py  main.py
