[metadata]
name = dugannotationcomparator
version = attr: dugannotationcomparator.__version__
author = Renaissance Computing Institute
author_email = vglazunov@renci.org
description = compares annotation results.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RENCI/DugAnnotationComparator
project_urls =
    Bug Tracker = https://github.com/RENCI/DugAnnotationComparator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = true
install_requires =


[options.entry_points]
console_scripts =
    dugannotationcomparator = dugannotationcomparator.main:main

[options.packages.find]
where = src
